# cruft

./: .bumpversion.cfg  .cruft.json  VERSION  pyproject.toml
.github/workflows/: build-test-publish.yml
cicd/rc/: build_manifests.rc  configure_aws_codeartifact.rc  configure_aws_credentials.rc  setup_github_actions_git.rc
cruft/: _cli.py  exceptions.py
cruft/_commands/: check.py  create.py  diff.py  link.py  update.py
cruft/_commands/utils/: cookiecutter.py  generate.py
runConfigurations/: cruft ldx_bricks.run.xml  pytest cruft tests.run.xml
tests/: test_api.py  test_cli.py
